(examples) - fix overflow on oil-gas example

--- a/Examples/src/components/CodePreview/index.module.scss
+++ b/Examples/src/components/CodePreview/index.module.scss
@@ -12,7 +12,7 @@
         width: 100%;
         height: 100%;
         overflow: auto;
-        padding-bottom: 50%;
+        padding-bottom: 50px;
     }
 
     .rightButtonGroup {
